--- a/CSC116_Prop_Trend.ipynb
+++ b/CSC116_Prop_Trend.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPCIyOpuInYQ1krO3TuoXs",
+      "authorship_tag": "ABX9TyNGurzdOPlrZnsooPimauUg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,7 +126,7 @@
     {
       "cell_type": "code",
       "source": [
-        "covid = pd.read_csv('https://raw.githubusercontent.com/lcbjrrr/algojust/refs/heads/main/covid19.csv')\n",
+        "covid = pd.read_csv('https://raw.githubusercontent.com/lcbjrrr/ProgWData/refs/heads/main/covid19.csv')\n",
         "covid.index = pd.to_datetime(covid['date'])\n",
         "covid=covid.drop('date', axis=1)\n",
         "covid.plot()"
@@ -137,15 +137,15 @@
           "height": 538
         },
         "id": "wrAePkwqe1G_",
-        "outputId": "e4f2b9bb-7472-4a6c-fbed-e90d42028a10"
+        "outputId": "e5761fdf-dee5-4001-8111-cf3f12d7060d"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3431995168.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+            "/tmp/ipython-input-2201619002.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
             "  covid.index = pd.to_datetime(covid['date'])\n"
           ]
         },
@@ -183,7 +183,8 @@
     {
       "cell_type": "code",
       "source": [
-        "cov = pd.read_csv('https://raw.githubusercontent.com/lcbjrrr/quant/master/covid_br%20-%20ok.csv')\n",
+        "import pandas as pd\n",
+        "cov = pd.read_csv('https://raw.githubusercontent.com/lcbjrrr/ProgWData/master/covid_usa.csv')\n",
         "us = cov[cov['Country/Region']=='US']\n",
         "usa = us.T[4:]\n",
         "usa.diff().rolling(14).mean().plot()"
@@ -194,9 +195,9 @@
           "height": 447
         },
         "id": "ponOCSR9hg38",
-        "outputId": "396249ad-9a44-460c-c82c-08f617dd64b7"
+        "outputId": "05a20f98-93c3-4434-bd60-12e8df1fd154"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 2
         },
         {
           "output_type": "display_data",
