--- a/CSC116_3_Prop_Trend.ipynb
+++ b/CSC116_3_Prop_Trend.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdVK/HxUyl+9JTUvan4Kif",
+      "authorship_tag": "ABX9TyPPpOQzYdtHtb5JaFJnJ5Mr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Pie charts are used to visually show how different parts contribute to a whole, making it easy to compare proportions of categories in a dataset. The code `student_per_course = grades.groupby('Course')['Student'].count()` groups the data by the 'Course' column and counts the number of students in each course. Then, `student_per_course.plot(kind='pie')` creates a pie chart to visually display the proportion of students enrolled in each course, making it easy to compare course popularity."
+        "Pie charts are used to visually show how different parts contribute to a whole, making it easy to compare proportions of categories in a dataset. The code `student_per_course = grades.groupby('Course')['Student'].count()` groups the data by the 'Course' column and counts the number of students in each course. Then, `student_per_course.plot(kind='pie')` creates a pie chart to visually display the proportion of students enrolled in each course, making it easy to compare course popularity"
       ],
       "metadata": {
         "id": "vPukDjcOfFdM"
@@ -57,7 +57,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "grades = pd.read_csv('https://raw.githubusercontent.com/lcbjrrr/ProgWdata/refs/heads/main/grades_ok.csv')\n",
+        "grades = pd.read_csv('https://raw.githubusercontent.com/lcbjrrr/ProgWdata/refs/heads/main/grades_final.csv')\n",
         "student_per_course = grades.groupby('Course')['Student'].count()\n",
         "print(student_per_course)\n",
         "student_per_course.plot(kind='pie')"
@@ -68,9 +68,9 @@
           "height": 510
         },
         "id": "B-4p_0gue1Er",
-        "outputId": "291307b9-5727-4eec-b5d6-8cd90c80aacd"
+        "outputId": "a647d94a-93dc-4cc9-c614-3312c813d221"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         },
         {
           "output_type": "display_data",
@@ -137,9 +137,9 @@
           "height": 538
         },
         "id": "wrAePkwqe1G_",
-        "outputId": "e5761fdf-dee5-4001-8111-cf3f12d7060d"
+        "outputId": "a897493a-1d37-4b6a-ec09-a6810866eac4"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         },
         {
           "output_type": "display_data",
@@ -195,9 +195,9 @@
           "height": 447
         },
         "id": "ponOCSR9hg38",
-        "outputId": "05a20f98-93c3-4434-bd60-12e8df1fd154"
+        "outputId": "59c47cb3-14eb-4371-b51b-5ef85dc160d2"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
